# JFaceRecognition

./: .editorconfig  .gitignore  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/main/cxx/: CMakeList.txt  CMakeLists.txt  io_github_glorrian_DlibInterface.cpp  io_github_glorrian_DlibInterface.h
src/main/java/io/github/glorrian/: Dlib.java  DlibInterface.java
src/main/kotlin/io/github/glorrian/utils/: MatUtils.kt
src/test/kotlin/io/github/glorrian/utils/: MatUtilsTest.kt
